Added very basic recipe ingredient support in the recipe detail view

--- a/app/src/main/res/layout/recipe_detail_fragment.xml
+++ b/app/src/main/res/layout/recipe_detail_fragment.xml
@@ -31,6 +31,11 @@
                 tools:text="Joe's Quick Grape Mead" />
 
 
+            <TableLayout
+                android:id="@+id/ingredientsTable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </TableLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
