WIP migration to Android Jetpack style
- added navigation framework, started migrating to a single StartActivity
- update dependency versions
- Cleaned up Dagger DI
- moved to databinding v2
- testing with Android P

--- a/app/src/main/res/layout/recipe_list.xml
+++ b/app/src/main/res/layout/recipe_list.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.recipe.RecipeListFragment">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipe_list"
         android:layout_width="match_parent"
