--- a/app/src/main/res/layout/batch_form_fragment.xml
+++ b/app/src/main/res/layout/batch_form_fragment.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.batch.form.BatchFormFragment">
 
     <data>
-
         <variable
-            name="batch"
-            type="com.fullmeadalchemist.mustwatch.vo.Batch" />
+            name="viewmodel"
+            type="com.fullmeadalchemist.mustwatch.ui.batch.BatchViewModel" />
     </data>
 
     <ScrollView
@@ -41,8 +41,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Batch name"
                     android:inputType="text"
-                    android:maxLines="1"
-                    android:text="@{batch.name}" />
+                    android:maxLines="1"/>
+                    <!--android:text="@{viewmodel.batch.name}" />-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -69,10 +69,9 @@
                     android:ems="10"
                     android:gravity="start|center"
                     android:maxLines="1"
-                    android:text="@{batch.createDate}"
                     android:textAlignment="textStart"
-                    tools:text="Mar 31, 2017"
-                    android:layout_marginLeft="24dp" />
+                    tools:text="Mar 31, 2017"/>
+                    android:text="@{viewmodel.batch.createDate}"/>
 
                 <TextView
                     android:id="@+id/createDateTime"
@@ -106,8 +105,7 @@
                     android:contentDescription="Add Sugar"
                     android:text="Add Sugar"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginLeft="8dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/add_yeast_button"
@@ -118,8 +116,7 @@
                     android:contentDescription="Add Yeast"
                     android:text="Add Yeast"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/add_sugar_button"
-                    android:layout_marginLeft="8dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/add_sugar_button"/>
 
                 <Button
                     android:id="@+id/add_nutrient_button"
@@ -130,8 +127,7 @@
                     android:contentDescription="Add Nutrient"
                     android:text="Add Nutrient"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginRight="8dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/add_stabilizer_button"
@@ -142,8 +138,7 @@
                     android:contentDescription="Add Stabilizer"
                     android:text="Add Stabilizer"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/add_nutrient_button"
-                    android:layout_marginRight="8dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/add_nutrient_button" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -200,8 +195,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Target ABV%"
                     android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:text="@{safeUnbox(batch.targetABV)}" />
+                    android:maxLines="1"/>
+                    <!--android:text="@{safeUnbox(viewmodel.batch.targetABV)}" />-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -215,8 +210,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Target starting Specific Gravity (example: 1.115)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:text="@{safeUnbox(batch.targetSgStarting)}" />
+                    android:maxLines="1"/>
+                    <!--android:text="@{safeUnbox(viewmodel.batch.targetSgStarting)}" />-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -230,8 +225,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Target final Specific Gravity (example: 1.05)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:text="@{safeUnbox(batch.targetSgFinal)}" />
+                    android:maxLines="1"/>
+                    <!--android:text="@{safeUnbox(viewmodel.batch.targetSgFinal)}" />-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -245,8 +240,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Starting pH level (example: 3.7)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:text="@{safeUnbox(batch.startingPh)}" />
+                    android:maxLines="1"/>
+                    <!--android:text="@{safeUnbox(viewmodel.batch.startingPh)}" />-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -260,8 +255,8 @@
                     android:layout_height="wrap_content"
                     android:hint="starting temperature"
                     android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:text="@{safeUnbox(batch.startingTemp)}" />
+                    android:maxLines="1"/>
+                    <!--android:text="@{safeUnbox(viewmodel.batch.startingTemp)}" />-->
 
             </android.support.design.widget.TextInputLayout>
 
@@ -277,8 +272,7 @@
                 android:layout_marginTop="18dp"
                 android:orientation="horizontal"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_temp_group">
+                app:layout_constraintRight_toRightOf="parent">
 
                 <TextView
                     android:id="@+id/textView_notes_label"
@@ -307,11 +301,11 @@
                     android:ems="10"
                     android:inputType="textMultiLine"
                     android:lines="4"
-                    android:text="@{batch.notes}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
-                    tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here." />
+                    tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here."/>
+                    <!--android:text="@{viewmodel.batch.notes}"/>-->
 
             </android.support.constraint.ConstraintLayout>
 
