--- a/app/src/main/res/layout/ingredient_dialog.xml
+++ b/app/src/main/res/layout/ingredient_dialog.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 Full Mead Alchemist, LLC.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,12 +15,14 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    tools:context=".ui.batch.form.AddIngredientDialog">
 
     <Spinner
         android:id="@+id/ingredients_spinner"
